test/files/neg/t12074.scala

// scalac: -Xlint -Werror -Yrangepos:false

class C {
  private val range = -700 to 700
  private val rangely = -700.to(700)
}
